syntax = "proto3";
package test.elizabeth.faceit.api.v1;
option go_package = "github.com/elizabeth-dev/FACEIT_Test/pkg/api/v1";

import "google/protobuf/timestamp.proto";

message Filter {
	enum Operator {
		EQUALS = 0;
		NOT_EQUALS = 1;
		GREATER_THAN = 2;
		GREATER_THAN_EQ = 3;
		LESS_THAN = 4;
		LESS_THAN_EQ = 5;
	}

	string field = 1;
	Operator operator = 2;
	oneof value {
		string string_value = 3;
		int64 int_value = 4;
		double double_value = 5;
		bool bool_value = 6;
		google.protobuf.Timestamp timestamp_value = 7;
	}
}

message Sort {
	enum Direction {
		ASC = 0;
		DESC = 1;
	}
	string field = 1;
	Direction direction = 2;
}

message Pagination {
	int64 limit = 1;
	int64 offset = 2;
}
